--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ packages = [
     { include = "volsurface", from = "src" }
 ]
 
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
+
 [tool.poetry.dependencies]
 python = "^3.10"
 numpy = "^2.2.1"
